<resources>
    <string name="app_name">IViewSmart</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Avjeet Singh</string>
    <string name="nav_header_subtitle">+91987898657</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="need_to_pay_fees">Need to pay fees?</string>
    <string name="get_instant_loan">Get Instant Loan</string>
    <string name="add_money">Add Money</string>
    <string name="school_location">Select Your School\'s Location</string>
    <string name="select_school">Select Your School</string>
    <string name="proceed">Proceed</string>
    <string name="school_frg_text_email">Didn\'t find your institute? Email institute name and contact person details at
        education@paytm.com
    </string>
    <string name="enrollment_number">Enrolment Number</string>
    <string name="student_name">Student Name</string>
    <string name="section">Section</string>
    <string name="text_class">Class</string>
    <string name="fees_due">Fees Due</string>
    <string name="school_fees">School Fees</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="pay_using">Pay Using</string>
    <string name="payment_to_be_paid">Payment to be Paid</string>
    <string name="fund_balance_text">Your Current fund box balance is</string>
    <string name="applied">Applied</string>
    <string name="school">School</string>
    <string name="tutors">Tutors</string>
    <string name="search_ntutors">Search\nTutors</string>
    <string name="your_fund_box_balance">Your fund box balance</string>
    <string name="dashboard">Dashboard</string>
    <string name="blog">Blog</string>
    <string name="chapter_wise_revision">Chapter Wise Revision</string>
    <string name="student_queries">Student Queries</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="view_statement">View Statement</string>
    <string name="school_name">School Name</string>
    <string name="enroll_no">Enroll No.</string>
    <string name="student_s_name">Student\'s Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="back_to_home">Back to Home</string>
    <string name="current_location">Current Location</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="attendance">Attendance</string>
    <string name="time_table">Time Table</string>
    <string name="enter_message">Enter Message</string>

</resources>
