<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SchoolFees.SchoolLocationFragment"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school_location"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textSize="@dimen/font_20"
                android:textColor="@color/black"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_margin="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edit_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_school"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textSize="@dimen/font_20"
                android:textColor="@color/black"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_margin="20dp"/>

    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn_blue_accent"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_margin="@dimen/length_20dp"/>

    <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_frg_text_email"
            android:layout_marginEnd="@dimen/length_30dp"
            android:layout_marginStart="@dimen/length_30dp"/>


</LinearLayout>